# google_drive_download_cli

./: README.md  pyproject.toml
tests/: test_windsor_cli.py
tests/mocked_data/: classes.py
windsor_cli/: __main__.py
windsor_cli/src/cli_helpers/: cli.py  decorators.py
windsor_cli/src/client_helpers/: decorators.py  exceptions.py  file_downloader.py  third_party_configs.py  validations.py
windsor_cli/src/utils/: conversions.py
